# sg-data-jobs

./: README.md  pyproject.toml
.github/workflows/: scrape.yml
app/: Home.py
app/components/: charts.py
app/pages/: 1_Dashboard.py  3_Companies.py
app/pages_hidden/: 10_Learning_Roadmap.py  11_Market_Pulse.py  3_Role_Taxonomy.py  5_Company_Leaderboard.py  6_Jobs_For_You.py  8_AI_Skills_Deep_Dive.py
web/: README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
web/src/app/companies/: loading.tsx  page.tsx
web/src/app/jobs/: loading.tsx
web/src/components/: app-shell.tsx  charts.tsx  company-leaderboard.tsx  data-caveat.tsx  job-explorer.tsx  jobs-for-you.tsx  loading-shell.tsx  salary-distribution.tsx
web/src/lib/: data.ts  salary.ts  security.ts
